# OFEC_Alpha

./: .gitignore  CMakeLists.txt  ExtrLibs.cmake  FindMatlab.cmake  OFEC.sln  OFEC.vcxproj  OFEC.vcxproj.filters  README.md  cpp.hint  development_standard.md  makefile  matrix.cpp  matrix.h  todo_list.md
DE/: DE_individual.h  DE_population.h
Test_result/: beasley(1_1)_CRDE(50).txt  beasley(1_1)_JADE(50).txt  beasley(1_1)_NCDE(50).txt  branin_rcos(2_1)_JADE(50).txt  branin_rcos(2_1)_NSDE(50).txt  center_peak(2_1)_NSDE(50).txt  equal_maxima(1_1)_JADE(50).txt  equal_maxima(1_1)_NSDE(50).txt  sphere(10_1)_CRDE(50).txt  sphere(10_1)_JADE(50).txt  sphere(2_1)_CRDE(50).txt  sphere(2_1)_JADE(50).txt  sphere(2_1)_jDE(50).txt  sphere(3_1)_JADE(50).txt  sphere(3_1)_jDE(50).txt  sphere(5_1)_CRDE(50).txt  vincent(1_1)_NSDE(50).txt  vincent(2_1)_JADE(50).txt  vincent(2_1)_NCDE(50).txt  vincent(2_1)_NSDE(50).txt  vincent(2_1)_jDE(50).txt  vincent(3_1)_JADE(50).txt
core/: datum_base.h  definition.h  enable_shared_ptr.h  exception.h  global.cpp  global.h  instance.cpp  instance.h
core/algorithm/: algorithm.cpp  algorithm.h  encoding.h  individual.h  multi_population.h  population.h  solution.h  termination.cpp  termination.h
core/environment/: environment.cpp  environment.h
core/measure/: measure.cpp  measure.h
core/parameter/: input_parameter_map.cpp  input_parameter_map.h  parameter_map.cpp  parameter_map.h  parameter_variant.cpp  parameter_variant.h  variants_to_stream.cpp  variants_to_stream.h
core/problem/: domain.h  encoding.h  optima.cpp  optima.h  optimum.h  problem.cpp  problem.h  solution.cpp  solution.h
core/problem/continuous/: constraint.cpp  constraint.h  continuous.cpp  continuous.h  function.cpp  function.h
core/problem/dynamic/: dynamic_problem.cpp  dynamic_problem.h
core/random/: extreal.cpp  extreal.h  newran.cpp  newran.h
datum/algorithm/: multi_pop.cpp  multi_pop.h  offspring.cpp  offspring.h
datum/algorithm/eeec/: ep_pop.cpp  ep_pop.h  jde_pop.cpp  jde_pop.h  num_samples.cpp  num_samples.h  radius_repulsion.cpp  radius_repulsion.h  seeds.cpp  seeds.h  sl_swarm.cpp  sl_swarm.h
datum/algorithm/offline_nbn/: offline_local_nbn.cpp  offline_local_nbn.h  offline_nbn_pop_data.cpp  offline_nbn_pop_data.h
instance/algorithm/DE/: DE_individual.h  DE_population.h  DEindividual.h  DEpopulation.h  individual.cpp  individual.h  population.h
instance/algorithm/EP/: individual.cpp  individual.h  population.h
instance/algorithm/EPANET/: ADOPT.cpp  ADOPT.h  ADOPT_individual.cpp  ADOPT_individual.h  ADOPT_sub_population.cpp  ADOPT_sub_population.h  COGL.cpp  COGL.h
instance/algorithm/GA/: population.h
instance/algorithm/PSO/: particle.cpp  particle.h  swarm.h
instance/problem/realworld/: FGear_Train.cpp  FGear_Train.h  FParEst_FMSoundWaves.cpp  FParEst_FMSoundWaves.h
instance/problem/single_objective/: metrics_gop.cpp  metrics_gop.h
result/: AN(GLC)_al(0.9)_be(1)_ga(6)_ND(10)_PS(100)_PN(sphere)_progr.txt
run/: factory.h  include_algorithm.h  include_problem.h  initialize.cpp  initialize.h  interface.cpp  interface.h  main.cpp  register_algorithm.cpp  register_algorithm.h  register_problem.cpp  register_problem.h  system_initialization.cpp  system_initialization.h  user_initialization.cpp  user_initialization.h
test/: example.cpp  test_CEC2005.cpp  test_CEC2013.cpp  test_CEC2013_MMO.cpp  test_CEC2015.cpp  test_CEC2015_MMO.cpp  test_CEC2015_expensive.cpp  test_CEC2015_global.cpp  test_CEC2017.cpp  test_DOP.cpp  test_MMOP.cpp  test_MOP.cpp  test_MO_sort.cpp  test_PSO.cpp  test_classical_problem.cpp  test_clustering.cpp  test_core.cpp  test_dominanceGraph.cpp  test_dynamic_problem.cpp  test_epanet.cpp  test_function_BBOB.cpp  test_functional.cpp  test_kd_tree.cpp  test_matrix.cpp  test_nondominated_sorting.cpp  test_problem.cpp  test_random.cpp
test/core/: variant_stream.cpp
test/paper/NBN_CSWIDN/: examle.hpp
test/problem/: cec13_mmop.cpp  com.cpp  cop.cpp  csiwdn.cpp  dop.cpp  free_peaks.cpp  mop.cpp  oomop.cpp
test/utility/: clustering.cpp  dim_min_intersection.cpp  functional.cpp  heap.cpp  kd_tree_search.cpp  kd_tree_space.cpp  libtorch_env.cpp  lsh.cpp  lstm.cpp  mathtollbox.cpp  matlab.cpp  matrix.cpp  matrix_eigen.cpp  mop_selection.cpp  nbn.cpp  nbn2.cpp  nondominated_sorting.cpp  population_distribution.cpp  random.cpp  test_BPNN.cpp  test_Kmeans.cpp  test_autoencoder.cpp  test_python.cpp  torch_environment.cpp  tt_fun.cpp  uncetianty_seq.cpp
utility/: catch.hpp  exception.h  factory.h  functional.cpp  functional.h  logistic_regression.cpp  logistic_regression.h  matrix.cpp  matrix.h  myVector.cpp  myVector.h  myexcept.h  singleton.h  types.h  vector.cpp  vector.h
utility/MO_sort/: d_graph.h  dominance_quick_sort.h  dominancegraph_insert_sort.h  fast_nondominated_sort.h
utility/clustering/: fcm.cpp  fcm.h  group.h  hslh.h
utility/dominance_graph/: dominance_graph.h
utility/function/: custom_function.cpp  custom_function.h  general_function.h  stream_function.cpp  stream_function.h  visit_lazy_list.h
utility/graph/: graph.cpp  graph.h
utility/hnsw/hnsw_mt/: hnsw_model.cpp  hnsw_model.h  neighbor_info.h  node.cpp  node.h  (+2 more)
utility/kd-tree/: kdtree_space.h  nanoflann.hpp
utility/linear_algebra/: matrix.cpp  matrix.h  vector.cpp  vector.h
utility/mapbox/: variant.hpp
utility/matlab/: matlab_utility.h
utility/nondominated_sorting/: CornerSort.cpp  CornerSort.h  DeductiveSort.cpp  DeductiveSort.h  DominanceGraphLinkSort.h  DominanceGraphSort.h  FastNondominatedSort.h  FastSort.cpp  FastSort.h  LinkSort.cpp  LinkSort.h  NSGA2.h  T_ENS.cpp  T_ENS.h  YiyaSort.cpp  YiyaSort.h  d_graph.h  d_quicktree.h  deductive_sort.h  fast_sort.h  filter_sort.h  new_static_population.cpp  new_static_population.h  nodes_initialize.h  preSorting.h  quick_sort.h  static_population.cpp  static_population.h
utility/random/: extreal.cpp  extreal.h  newran.cpp  newran.h  newran_ h.todo  newran_cpp.todo
utility/typevar/: arithmetic.cpp  assign.cpp  ctor.cpp  dynamic.cpp  istream.cpp  relational.cpp  types.cpp  typevar.h
x64/Debug/: vc141.idb
(+1430 files in other folders)
